socket ball movement 1.9.2

--- a/monitor.html
+++ b/monitor.html
@@ -13,6 +13,10 @@
         border-radius: 50px;
         -webkit-radius: 50px;
         background-color: blue;
+        -webkit-transition: position 250ms linear;
+        -moz-transition: position 250ms linear;
+        -o-transition: position 250ms linear;
+        transition: position 250ms linear;
       }
     </style>
   </head>
