socket ball movement 1.9.3

--- a/monitor.html
+++ b/monitor.html
@@ -13,10 +13,14 @@
         border-radius: 50px;
         -webkit-radius: 50px;
         background-color: blue;
-        -webkit-transition: position 250ms linear;
-        -moz-transition: position 250ms linear;
-        -o-transition: position 250ms linear;
-        transition: position 250ms linear;
+        -webkit-transition: top 35ms linear;
+        -moz-transition: top 35ms linear;
+        -o-transition: top 35ms linear;
+        transition: top 35ms linear;
+        -webkit-transition: left 35ms linear;
+        -moz-transition: left 35ms linear;
+        -o-transition: left 35ms linear;
+        transition: left 35ms linear;
       }
     </style>
   </head>
