--- a/monitor.html
+++ b/monitor.html
@@ -13,14 +13,11 @@
         border-radius: 50px;
         -webkit-radius: 50px;
         background-color: blue;
-        -webkit-transition: top 35ms linear;
-        -moz-transition: top 35ms linear;
-        -o-transition: top 35ms linear;
-        transition: top 35ms linear;
-        -webkit-transition: left 35ms linear;
-        -moz-transition: left 35ms linear;
-        -o-transition: left 35ms linear;
-        transition: left 35ms linear;
+/*        -webkit-transition: top,left 35ms linear;
+        -moz-transition: top,left 35ms linear;
+        -o-transition: top,left 35ms linear;
+        transition: top,left 35ms linear;*/
+
       }
     </style>
   </head>
