--- a/index.html
+++ b/index.html
@@ -6,18 +6,13 @@
       body {
         font-family: helvetica, arial, sans serif;
       }
-      #sphere {
-        position: absolute; 
-        width: 50px;
-        height: 50px;
-        border-radius: 50px;
-        -webkit-radius: 50px;
-        background-color: blue;
-      }
     </style>
   </head>
   <body>
-    <div id="sphere"></div>
+    <div>
+      <button id="lebutton">Start</button>
+      <button id="restartbutton">restart</button>
+    </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="script.js" type="text/javascript"></script>
   </body>
