--- a/monitor.html
+++ b/monitor.html
@@ -4,25 +4,17 @@
     <title>Schnitty</title>
     <style>
       body {
-        font-family: helvetica, arial, sans serif;
-      }
-      #sphere {
-        position: absolute; 
-        width: 50px;
-        height: 50px;
-        border-radius: 50px;
-        -webkit-radius: 50px;
-        background-color: blue;
-/*        -webkit-transition: top,left 35ms linear;
-        -moz-transition: top,left 35ms linear;
-        -o-transition: top,left 35ms linear;
-        transition: top,left 35ms linear;*/
-
-      }
+            font-family: helvetica, arial, sans serif;
+            padding: 0; margin: 0; overflow: hidden;
+            }
     </style>
   </head>
   <body>
-    <div id="sphere"></div>
+    <canvas id="canvas"></canvas>
+    <audio preload="true" id="collide">
+      <source src="http://dl.dropbox.com/u/26141789/canvas/pingpong/Metal%20Cling%20-%20Hit.mp3" />
+      <source src="http://dl.dropbox.com/u/26141789/canvas/pingpong/Metal%20Cling%20-%20Hit.wav" />
+    </audio>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="script-monitor.js" type="text/javascript"></script>
   </body>
