--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <div>
-      <button id="lebutton">Start</button>
-      <button id="restartbutton">restart</button>
+      <button id="lebutton" style="height:450px;width:100%;">Start</button>
+      <button id="restartbutton" style="height:450px;width:100%;">restart</button>
     </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="script.js" type="text/javascript"></script>
