reset to last week plus small bug fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div>
-      <button id="lebutton" style="height:450px;width:100%;">Start</button>
+      <button id="startbutton" style="height:450px;width:100%;">Start</button>
       <button id="restartbutton" style="height:450px;width:100%;">restart</button>
     </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
