--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   </head>
   <body>
     <div>
-      <button id="startbutton" style="height:450px;width:100%;font-size:30px;">Start</button>
-      <button id="restartbutton" style="height:450px;width:100%;font-size:30px;">restart</button>
+      <button id="startbutton" style="height:450px;width:100%;font-size:30px;" onclick="socket.emit('start', 'true');
+">Start</button>
+      <button id="restartbutton" style="height:450px;width:100%;font-size:30px;" onclick="  socket.emit('restart', 'true');
+">restart</button>
     </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="script.js" type="text/javascript"></script>
