--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <div>
-      <button id="startbutton" style="height:150px;width:100%;font-size:30px;" onclick="socket.emit('start', 'true');x=0;vx=0;">Start</button>
-      <button id="restartbutton" style="height:150px;width:100%;font-size:30px;" onclick="  socket.emit('restart', 'true');x=0;vx=0;">restart</button>
+      <button id="startbutton" style="height:150px;width:100%;font-size:30px;" onclick="socket.emit('start', 'true');">Start</button>
+      <button id="restartbutton" style="height:150px;width:100%;font-size:30px;" onclick="  socket.emit('restart', 'true');">restart</button>
     </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="script.js" type="text/javascript"></script>
