--- a/monitor.html
+++ b/monitor.html
@@ -12,8 +12,7 @@
   <body>
     <canvas id="canvas"></canvas>
     <audio preload="true" id="collide">
-      <source src="http://dl.dropbox.com/u/26141789/canvas/pingpong/Metal%20Cling%20-%20Hit.mp3" />
-      <source src="http://dl.dropbox.com/u/26141789/canvas/pingpong/Metal%20Cling%20-%20Hit.wav" />
+      <source src="quak.mp3" />
     </audio>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="script-monitor.js" type="text/javascript"></script>
