--- a/lib/index.html
+++ b/lib/index.html
@@ -19,6 +19,6 @@
       <button id="restartbutton" style="height:150px;width:100%;font-size:30px;" onclick="  socket.emit('restart', 'true');">restart</button>
     </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="script.js" type="text/javascript"></script>
+    <script src="lib/script.js" type="text/javascript"></script>
   </body>
 </html>
