--- a/lib/monitor.html
+++ b/lib/monitor.html
@@ -12,10 +12,10 @@
   <body>
     <canvas id="canvas"></canvas>
     <audio preload="true" id="collide">
-      <source src="lib/quak.mp3" />
+      <source src="quak.mp3" />
     </audio>
-    <img src="lib/qrcode.png" id="qr" />
+    <img src="qrcode.png" id="qr" />
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="lib/script-monitor.js" type="text/javascript"></script>
+    <script src="script-monitor.js" type="text/javascript"></script>
   </body>
 </html>
