--- a/lib/index.html
+++ b/lib/index.html
@@ -16,7 +16,7 @@
     <div>
       <img src="holdphonelikethis.gif" id="howto">
       <button id="startbutton" style="height:150px;width:100%;font-size:30px;" onclick="socket.emit('start', 'true');hide();">Start</button>
-      <button id="restartbutton" style="height:150px;width:100%;font-size:30px;" onclick="  socket.emit('restart', 'true');">restart</button>
+      <button id="restartbutton" style="height:150px;width:100%;font-size:30px;display:none;" onclick="  socket.emit('restart', 'true');">restart</button>
     </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="script.js" type="text/javascript"></script>
