cleaning up repo and adding comments

--- a/client/monitor.html
+++ b/client/monitor.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="icon" type="image/x-icon" href="media/favicon.ico" />
     <title>Schnitty</title>
     <style>
       body {
@@ -12,9 +13,9 @@
   <body>
     <canvas id="canvas"></canvas>
     <audio preload="true" id="collide">
-      <source src="quak.mp3" />
+      <source src="media/quak.mp3" />
     </audio>
-    <img src="qrcode.png" id="qr" />
+    <img src="media/qrcode.png" id="qr" />
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="script-monitor.js" type="text/javascript"></script>
   </body>
