--- a/client/404.html
+++ b/client/404.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="icon" type="image/x-icon" href="media/favicon.ico" />
     <title>nuthin i guess</title>
 
   </head>
