--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="icon" type="image/x-icon" href="media/favicon.ico" />
     <title>Schnitty</title>
     <style>
       body {
@@ -14,11 +15,11 @@
   </head>
   <body>
     <div>
-      <img src="holdphonelikethis.gif" id="howto">
+      <img src="media/holdphonelikethis.gif" id="howto">
       <button id="startbutton" style="height:150px;width:100%;font-size:30px;" onclick="socket.emit('start', 'true');hide();">Start</button>
       <button id="restartbutton" style="height:150px;width:100%;font-size:30px;display:none;" onclick="  socket.emit('restart', 'true');">restart</button>
     </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="script.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
   </body>
 </html>
