--- a/client/monitor.html
+++ b/client/monitor.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="icon" type="image/x-icon" href="media/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/media/favicon.ico" />
     <title>Schnitty</title>
     <style>
       body {
@@ -13,10 +13,10 @@
   <body>
     <canvas id="canvas"></canvas>
     <audio preload="true" id="collide">
-      <source src="media/quak.mp3" />
+      <source src="/media/quak.mp3" />
     </audio>
-    <img src="media/qrcode.png" id="qr" />
+    <img src="/media/qrcode.png" id="qr" />
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="script-monitor.js" type="text/javascript"></script>
+    <script src="/js/script-monitor.js" type="text/javascript"></script>
   </body>
 </html>
