--- a/client/index.html
+++ b/client/index.html
@@ -15,11 +15,11 @@
   </head>
   <body>
     <div>
-      <img src="client/media/holdphonelikethis.gif" id="howto">
+      <img src="media/holdphonelikethis.gif" id="howto">
       <button id="startbutton" style="height:150px;width:100%;font-size:30px;" onclick="socket.emit('start', 'true');hide();">Start</button>
       <button id="restartbutton" style="height:150px;width:100%;font-size:30px;display:none;" onclick="socket.emit('restart', 'true');">restart</button>
     </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="client/js/script.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
   </body>
 </html>
