--- a/client/monitor.html
+++ b/client/monitor.html
@@ -13,10 +13,10 @@
   <body>
     <canvas id="canvas"></canvas>
     <audio preload="true" id="collide">
-      <source src="client/media/quak.mp3" />
+      <source src="media/quak.mp3" />
     </audio>
-    <img src="client/media/qrcode.png" id="qr" />
+    <img src="media/qrcode.png" id="qr" />
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="client/js/script-monitor.js" type="text/javascript"></script>
+    <script src="js/script-monitor.js" type="text/javascript"></script>
   </body>
 </html>
