cleaning up repo and adding comments

--- a/client/monitor.html
+++ b/client/monitor.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="icon" type="image/x-icon" href="media/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="client/media/favicon.ico" />
     <title>Schnitty</title>
     <style>
       body {
