--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="icon" type="image/x-icon" href="media/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="client/media/favicon.ico" />
     <title>Schnitty</title>
     <style>
       body {
